# cadastros

./: Cadastros.xlsx  README.md  pyproject.toml
app/: app.py
